Estructura básica del sitio creada

--- a/index.html
+++ b/index.html
@@ -12,16 +12,20 @@
         rel="stylesheet">
     <title>HTML CSS Entregable</title>
 </head>
-
 <body>
-    <h1>Conceptos HTML Y CSS</h1>
-    <div class="enlaces">
-        <a href="background.html">background</a>
-        <a href="directorios.html">directorios</a>
-        <a href="flexbox.html">flexbox</a>
-        <a href="responsive.html">responsive</a>
-        <a href="tablas.html">tablas</a>
-    </div>
+    <header>
+        <h1>Conceptos HTML Y CSS</h1>
+    </header>
+    <main>
+        <div class="enlaces">
+            <a href="background.html">background</a>
+            <a href="directorios.html">directorios</a>
+            <a href="flexbox.html">flexbox</a>
+            <a href="responsive.html">responsive</a>
+            <a href="tablas.html">tablas</a>
+        </div>
+    </main>
+    <footer>
+    </footer>
 </body>
-
 </html>
