--- a/background.html
+++ b/background.html
@@ -6,6 +6,18 @@
     <title>Background</title>
 </head>
 <body>
-    
-</body>
+    <header>
+        <h1>Conceptos HTML Y CSS</h1>
+    </header>
+    <main>
+       <h2>Background</h2>
+       <p>Primer párrafo</p>
+       <div class="volver">
+        <a href="index.html">VOLVER AL INDICE</a>
+       </div>
+    </main>
+    <footer>
+
+    </footer>
+ </body>
 </html>
