--- a/responsive.html
+++ b/responsive.html
@@ -16,9 +16,9 @@
         <h1>Conceptos HTML Y CSS</h1>
     </header>
     <main>
-       <h2>Responsive Web</h2>
-       <p>Primer párrafo</p>
-
+       <h2>Responsive Web Design</h2>
+        <p>Cada vez es más frecuente acceder a Internet con diferentes tipos de dispositivos, que a su vez tienen diferentes pantallas y resoluciones, con distintos tamaños y formas, que hacen que se consuman las páginas webs de formas diferentes, apareciendo por el camino también diferentes necesidades, problemas y soluciones.</p>
+        <p>Hoy en día se le denomina Responsive Web Design (o RWD) a los diseños web que tienen la capacidad de adaptarse al tamaño y formato de la pantalla en la que se visualiza el contenido, respecto a los diseños tradicionales en los que las páginas web estaban diseñadas sólo para un tamaño o formato específico, y no tenían esa capacidad de adaptación.</p>
        <div class="volver">
         <a href="index.html">VOLVER AL INDICE</a>
        </div>
