cambios background azalfa

--- a/background.html
+++ b/background.html
@@ -6,6 +6,12 @@
     <title>Background</title>
 </head>
 <body>
-    
+    <h2>Background-color</h2>
+<main class="principal">
+    <div class="izq">Lorem ipsum dolor sit amet, consectetuer</div>
+
+<div class="derecha">Lorem ipsum dolor sit amet, consectetuer</div>
+</main>
+
 </body>
 </html>
