--- a/flexbox.html
+++ b/flexbox.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="stylecarla.css">
+        <link rel="stylesheet" href="/styles/styleflexboxcss">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link
@@ -26,9 +26,15 @@
             </nav>
         </div>
 
-        <section id="Flex-direction" class="flex-container">
+        <section id="Enlace1"  class="flex-container">
             <h3>Flex-direction</h3>
             <p>Controla la dirección en la que se colocan los elementos dentro del contenedor flex</p>
+
+            <p>Row: Los elementos se alinean en una fila horizontal (valor por defecto).</p>
+            <p>Column:Los elementos alineados en una columna vertical.</p>
+            <p>Row-reverse: Alinea los elementos en una fila, pero en orden inverso.</p>
+            <p>Column-reverse:Alinea los elementos en una columna en orden inverso. </p>
+            
             <div class="Ejemplo-row">
                 <div class="Ejemplo-caja">Row</div>
                 <div class="Ejemplo-caja">Row</div>
@@ -55,7 +61,7 @@
 
         </section>
 
-        <section id="Eje-horizontal"class="flex-container">
+        <section id="Enlace2" class="flex-container">
         <h3>Eje horizontal (Justify-content)</h3>
         <p> Define cómo se alinean los elementos a lo largo del eje horizontal</p>
         <div class="Ejemplo-flex-start">
@@ -99,7 +105,7 @@
 
         </section>
 
-        <section id="Eje-vertical" class="flex-container">
+        <section id="Enlace3" class="flex-container">
             <h3>Eje Vertical (Align-items)</h3>
            <p>Define cómo se alinean los elementos a lo largo del eje vertical</p> 
            <div class="Ejemplo-flex-start">
