--- a/flexbox.html
+++ b/flexbox.html
@@ -20,6 +20,7 @@
             <h2>Introducción a Flexbox</h2>
             <div class="subtitulo">
                 <p>Flexbox es un modelo de diseño en CSS que alinea elementos en una interfaz web de manera que se distribuyan el espacio y se alineen en filas o columnas, mejorando así la usabilidad y estética de la página.</p>
+                <p>Flexbox es un módulo completo que implica un conjunto de propiedades. ALgunas pensadas para el contenedor "Parent" o contenedor flexible y otras para los "childs" o elementos flexibles</p>
             </div>
             <div class="Listas">
                 <ul class="lista-ordenada">
