cambios directorios.html y presentacion directorios y responsive

--- a/directorios.html
+++ b/directorios.html
@@ -1,28 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="styles/index.css">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link
-            href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Teko:wght@300..700&display=swap"
-            rel="stylesheet">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Teko:wght@300..700&display=swap"
+        rel="stylesheet">
     <title>Directorios y cdn servers</title>
 </head>
+
 <body>
     <header>
         <h1>Conceptos HTML Y CSS</h1>
     </header>
     <main>
-       <h2>Directorios y cdn servers</h2>
-       <p>Primer párrafo</p>
-       <div class="volver">
-        <a href="index.html">VOLVER AL INDICE</a>
-       </div>
+        <h2>Directorios y cdn servers</h2>
+        <p>Cuando estás creando un sitio web, necesitas ensamblar estos archivos en una estructura sensible en tu
+            computadora local, asegurarte de que puedan comunicarse entre sí y hacer que todo su contenido se vea bien
+            antes de que eventualmente los cargues en un servidor.</p>
+        <div class="volver">
+            <a href="index.html">VOLVER AL INDICE</a>
+        </div>
     </main>
     <footer>
     </footer>
- </body>
+</body>
+
 </html>
