--- a/flexbox.html
+++ b/flexbox.html
@@ -144,31 +144,31 @@
                 </ul>
             </div>
             
-            <div class="Ejemplo-flex-start">
+            <div class="Ejemplo-flex-start-vertical">
                 <div class="Ejemplo-caja">flex-start</div>
                 <div class="Ejemplo-caja">flex-start</div>
                 <div class="Ejemplo-caja">flex-start</div>
             </div>
 
-            <div class="Ejemplo-center">
+            <div class="Ejemplo-center-vertical">
                 <div class="Ejemplo-caja">Center</div>
                 <div class="Ejemplo-caja">Center</div>
                 <div class="Ejemplo-caja">Center</div>
             </div>
 
-            <div class="Ejemplo-flex-end">
+            <div class="Ejemplo-flex-end-vertical">
                 <div class="Ejemplo-caja">flex-end</div>
                 <div class="Ejemplo-caja">flex-end</div>
                 <div class="Ejemplo-caja">flex-end</div>
             </div>
 
-            <div class="Ejemplo-stretch">
+            <div class="Ejemplo-stretch-vertical">
                 <div class="Ejemplo-caja">Stretch</div>
                 <div class="Ejemplo-caja">Stretch</div>
                 <div class="Ejemplo-caja">Stretch</div>
             </div>
 
-            <div class="Ejemplo-baseline">
+            <div class="Ejemplo-baseline-vertical">
                 <div class="Ejemplo-caja">baseline</div>
                 <div class="Ejemplo-caja">baseline</div>
                 <div class="Ejemplo-caja">baseline</div>
