--- a/flexbox.html
+++ b/flexbox.html
@@ -168,7 +168,7 @@
                 <div class="Ejemplo-caja">Stretch</div>
             </div>
 
-            <div class="Ejemplo-baseline-vertical">
+            <div class="Ejemplo-baseline">
                 <div class="Ejemplo-caja">baseline</div>
                 <div class="Ejemplo-caja">baseline</div>
                 <div class="Ejemplo-caja">baseline</div>
