--- a/tablas.html
+++ b/tablas.html
@@ -83,7 +83,7 @@
 
         <div>
             <p>Títulos</p>
-            <table border=”1” rules=”groups”> 
+            <table border="1" rules="groups"> 
                 <caption>Ventas</caption>
                 <tr>
                     <th>Hardware</th>
@@ -98,7 +98,7 @@
         </div>
 
         <div><p>Agrupación de filas</p>
-            <table border=”1” rules=”groups”>
+            <table border="1" rules="groups">
                 <caption>Ventas por secciones</caption>
                 <thead>
                     <tr>
@@ -400,7 +400,7 @@
        <div>
         <h3>Caption side</h3>
         <article>
-        <table border=”1” rules=”groups”> 
+        <table border="1" rules="groups"> 
             <caption style="caption-side: bottom;">Ventas</caption>
             <tr>
                 <th>Hardware</th>
